--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,48 @@ a {
   display: inline-block;
 }
 
+.guitar-neck {
+  width: 210px;
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+.guitar-neck tbody tr {
 
+}
+.guitar-neck tbody tr td:not(:nth-child(6)) {
+  border: 1px solid black;
+  height: 50px;
+  position: relative;
+}
+
+.guitar-neck tbody tr td .fretArea {
+  position: absolute;
+  display: block;
+  top:4px;
+  left: -10px;
+  width: 20px;
+  height: 44px;
+  background-color: transparent;
+  cursor: pointer;
+
+}
+.guitar-neck tbody tr td .note-bubble {
+    position: absolute;
+    display: block;
+    top:13px;
+    left: -14px;
+    width: 25px;
+    height: 30px;
+    border-radius: 45%;
+    background-color: orangered;
+    text-align: center;
+    cursor: pointer;
+    z-index: 2;
+}
+
+.guitar-neck tbody tr td:nth-child(6) {
+position: relative;
+}
 /* Custom, iPhone Retina */
 @media only screen and (min-width: 320px) {
 }
@@ -55,7 +96,7 @@ a {
 /* Small Devices, Tablets */
 @media only screen and (min-width: 768px) {
   .app-container {
-    padding: 120px 0px;
+    padding: 10px 0px;
     width: 500px;
   }
 }
@@ -63,7 +104,7 @@ a {
 /* Medium Devices, Desktops */
 @media only screen and (min-width: 992px) {
   .app-container {
-    padding: 120px 0px;
+    padding: 10px 0px;
     width: 700px;
   }
 }
@@ -71,7 +112,7 @@ a {
 /* Large Devices, Wide Screens */
 @media only screen and (min-width: 1200px) {
   .app-container {
-    padding: 120px 0px;
+    padding: 15px 0px;
     width: 900px;
   }
 }
