--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ a {
   width: 210px;
   border-collapse: collapse;
   border-spacing: 0;
+  float: left;
 }
 .guitar-neck tbody tr {
 
@@ -66,9 +67,15 @@ a {
   height: 44px;
   background-color: transparent;
   cursor: pointer;
-
+  z-index: 10;
 }
-.guitar-neck tbody tr td .note-bubble {
+.guitar-neck tbody .base-fret-container .fret .fretArea {
+    top: 0px;
+    left: -10px;
+    width: 20px;
+    height: 25px;
+}
+.guitar-neck tbody .fret-container  td .note-bubble {
     position: absolute;
     display: block;
     top:13px;
@@ -78,9 +85,38 @@ a {
     border-radius: 45%;
     background-color: orangered;
     text-align: center;
+    line-height: 30px;
     cursor: pointer;
-    z-index: 2;
 }
+.guitar-neck tbody .base-fret-container td .note-bubble {
+  position: absolute;
+  display: block;
+  top:0px;
+  left: -14px;
+  width: 25px;
+  height: 30px;
+  border-radius: 45%;
+  background-color: orangered;
+  text-align: center;
+  line-height: 30px;
+  cursor: pointer;
+  z-index: 2;
+}
+.guitar-neck tbody .base-fret-container .fret{
+  border-top: 0px;
+  height: 20px;
+}
+.guitar-neck tbody .base-fret-container .fret #x{
+  color: red;
+  position: absolute;
+  top: 0px;
+  left: -9px;
+  font-size: 24px;
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  width: 24px;
+  height: 30px;
+}
+
 
 .guitar-neck tbody tr td:nth-child(6) {
 position: relative;
