--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,13 @@
 ul {
   list-style: none;
 }
+button {
+  outline: 0;
+}
 a {
   color: black;
   text-decoration: none;
 }
-
 .nav-container {
   max-width: 400px;
   margin: auto;
@@ -39,15 +41,28 @@ a {
   max-width:500px;
   margin: auto;
 }
+.metronome-container {
+  position:relative;
+}
 .metronome-container > .bpm {
   display: inline-block;
 }
-
+.inline {
+  display: inline;
+}
+.inline-block {
+  display: inline-block;
+}
+.pull-left {
+  float: left;
+}
+.pull-right {
+  float: right;
+}
 .guitar-neck {
   width: 210px;
   border-collapse: collapse;
   border-spacing: 0;
-  float: left;
 }
 .guitar-neck tbody tr {
 
@@ -57,7 +72,12 @@ a {
   height: 50px;
   position: relative;
 }
-
+.fret-number {
+  position: absolute;
+  top: 10px;
+  left: -30px;
+  font-size: 15px;
+}
 .guitar-neck tbody tr td .fretArea {
   position: absolute;
   display: block;
@@ -117,7 +137,52 @@ a {
   height: 30px;
 }
 
-
+.rangeslider__handle::after {
+  content: none !important;
+}
+.slider-container {
+  display: inline-block;
+  width: calc(100% - 70px);
+}
+.icon-button,.icon-button:focus {
+  border:0px;
+  display: inline-block;
+  background-color: transparent;
+  text-align: center;
+  cursor: pointer;
+  outline: 0;
+}
+.icon-lg {
+  font-size: 2.5em;
+  line-height: 25px;
+  font-weight: bold;
+}
+.btn-success {
+  color: #7CB342;
+}
+.btn-error {
+  color: orangered;
+}
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.bpm-container {
+  margin: 10px 0px;
+}
+.circle {
+  border-radius: 50%;
+}
+.play-pause-button {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  transition: all 0.09s ease-in-out
+}
+i[class^="flaticon-"]{
+  display: block;
+}
 .guitar-neck tbody tr td:nth-child(6) {
 position: relative;
 }
