--- a/src/App.css
+++ b/src/App.css
@@ -171,6 +171,13 @@ a {
 .bpm-container {
   margin: 10px 0px;
 }
+.fret-accent {
+  position: absolute;
+  left: 10px;
+  width: 10px;
+  height:10px;
+  background-color: black;
+}
 .circle {
   border-radius: 50%;
 }
