--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,9 @@ a {
   color: black;
   text-decoration: none;
 }
+span,a,button{
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 .nav-container {
   max-width: 400px;
   margin: auto;
