--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ span,a,button{
 }
 .nav-container > ul > li {
   flex-grow: 1;
+  flex-basis: 0;
   text-align: center;
 }
 
@@ -151,7 +152,7 @@ span,a,button{
 }
 .slider-container {
   display: inline-block;
-  width: calc(100% - 70px);
+  width: calc(100% - 90px);
 }
 .icon-button,.icon-button:focus {
   border:0px;
